# ananbox

./: .gitmodules  README.md  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/github/teddynight/ananbox/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/github/ananbox/: ILocalInterface.aidl  IRemoteInterface.aidl
app/src/main/cpp/: CMakeLists.txt  Parcel.h  libanbox.cpp
app/src/main/cpp/cmake/: Boost.cmake  FindBoost.cmake  Proot.cmake  Talloc.cmake  Unwind.cmake
app/src/main/cpp/talloc/: cross-answers.txt
app/src/main/java/com/github/ananbox/: Anbox.kt  BinderReceiver.kt  BinderTest.kt  MainActivity.kt  ParcelConstructor.kt  SettingsActivity.kt  SettingsReceiver.kt  StorageProvider.kt
app/src/main/res/layout/: activity_main.xml  activity_settings.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/com/github/teddynight/ananbox/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
